--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -77,6 +77,12 @@
     <Compile Include="FormulaireReception.Designer.cs">
       <DependentUpon>FormulaireReception.cs</DependentUpon>
     </Compile>
+    <Compile Include="GridTesting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GridTesting.Designer.cs">
+      <DependentUpon>GridTesting.cs</DependentUpon>
+    </Compile>
     <Compile Include="PdfGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -89,21 +95,24 @@
     <EmbeddedResource Include="FormulaireReception.resx">
       <DependentUpon>FormulaireReception.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GridTesting.resx">
+      <DependentUpon>GridTesting.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -115,6 +124,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\273-checkmark.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\035-file-text.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
