--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -86,6 +86,12 @@
     <Compile Include="PdfGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdateBon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdateBon.Designer.cs">
+      <DependentUpon>UpdateBon.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BonReceptionList.resx">
       <DependentUpon>BonReceptionList.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +108,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UpdateBon.resx">
+      <DependentUpon>UpdateBon.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
