--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -86,6 +86,7 @@
     <Compile Include="PdfGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Technique.cs" />
     <Compile Include="UpdateBon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -139,6 +140,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\035-file-text.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NOT OK.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ok.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
