--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -87,6 +87,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Technique.cs" />
+    <Compile Include="TechniquesList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TechniquesList.Designer.cs">
+      <DependentUpon>TechniquesList.cs</DependentUpon>
+    </Compile>
     <Compile Include="UpdateBon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +115,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TechniquesList.resx">
+      <DependentUpon>TechniquesList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UpdateBon.resx">
       <DependentUpon>UpdateBon.cs</DependentUpon>
