--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -156,6 +156,9 @@
   <ItemGroup>
     <None Include="Resources\ok.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ESPACENET.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
