--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -54,6 +54,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin\AdminPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\AdminPanel.Designer.cs">
+      <DependentUpon>AdminPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\CrysptingService.cs" />
+    <Compile Include="Admin\User.cs" />
     <Compile Include="BonReception.cs" />
     <Compile Include="BonReceptionList.cs">
       <SubType>Form</SubType>
@@ -105,6 +113,10 @@
     <Compile Include="UpdateBon.Designer.cs">
       <DependentUpon>UpdateBon.cs</DependentUpon>
     </Compile>
+    <Compile Include="Users.cs" />
+    <EmbeddedResource Include="Admin\AdminPanel.resx">
+      <DependentUpon>AdminPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BonReceptionList.resx">
       <DependentUpon>BonReceptionList.cs</DependentUpon>
     </EmbeddedResource>
