Improved User class
Improved the user class by adding new functions and rewriting some of
the functions and handling errors properly.

--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -62,9 +62,7 @@
     </Compile>
     <Compile Include="Admin\CrysptingService.cs" />
     <Compile Include="Admin\Login.cs" />
-    <Compile Include="Admin\LoginForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Admin\LoginForm.cs" />
     <Compile Include="Admin\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
