--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -74,6 +74,7 @@
       <DependentUpon>CreateNewUser.cs</DependentUpon>
     </Compile>
     <Compile Include="Admin\CrysptingService.cs" />
+    <Compile Include="Admin\History.cs" />
     <Compile Include="Admin\Login.cs" />
     <Compile Include="Admin\LoginForm.cs">
       <SubType>Form</SubType>
