--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -66,6 +66,12 @@
     <Compile Include="Admin\AdminPanel.Designer.cs">
       <DependentUpon>AdminPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Admin\BonReceptionListValide.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\BonReceptionListValide.Designer.cs">
+      <DependentUpon>BonReceptionListValide.cs</DependentUpon>
+    </Compile>
     <Compile Include="Admin\Category.cs" />
     <Compile Include="Admin\CompleteHistoryList.cs">
       <SubType>Form</SubType>
@@ -149,6 +155,9 @@
     <EmbeddedResource Include="Admin\AdminPanel.resx">
       <DependentUpon>AdminPanel.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Admin\BonReceptionListValide.resx">
+      <DependentUpon>BonReceptionListValide.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Admin\CompleteHistoryList.resx">
       <DependentUpon>CompleteHistoryList.cs</DependentUpon>
     </EmbeddedResource>
@@ -226,6 +235,39 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ok ok ok ok.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\033-books.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\116-user-plus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\117-user-minus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\118-user-check.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\119-user-tie.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\039-file-text2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\131-spinner91.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\150-cogs.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\173-bin.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\191-menu2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\429-steam.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
