--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -183,6 +183,19 @@
     <Compile Include="TechniquesList.Designer.cs">
       <DependentUpon>TechniquesList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Testing\History.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Testing\History.Designer.cs">
+      <DependentUpon>History.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Testing\HistoryTest.cs" />
+    <Compile Include="Testing\Logger.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Testing\Logger.Designer.cs">
+      <DependentUpon>Logger.cs</DependentUpon>
+    </Compile>
     <Compile Include="UpdateBon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -233,6 +246,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TechniquesList.resx">
       <DependentUpon>TechniquesList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Testing\History.resx">
+      <DependentUpon>History.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Testing\Logger.resx">
+      <DependentUpon>Logger.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UpdateBon.resx">
       <DependentUpon>UpdateBon.cs</DependentUpon>
