More changes to be made

--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -113,6 +113,13 @@
     <Compile Include="Admin\CompleteHistoryList.Designer.cs">
       <DependentUpon>CompleteHistoryList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Admin\Config.cs" />
+    <Compile Include="Admin\Configuration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\Configuration.Designer.cs">
+      <DependentUpon>Configuration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Admin\CreateNewUser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -220,6 +227,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Admin\CompleteHistoryList.resx">
       <DependentUpon>CompleteHistoryList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\Configuration.resx">
+      <DependentUpon>Configuration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Admin\CreateNewUser.resx">
       <DependentUpon>CreateNewUser.cs</DependentUpon>
@@ -367,6 +377,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Notesd.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
