--- a/espaceNetSAV.csproj
+++ b/espaceNetSAV.csproj
@@ -380,6 +380,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Notesd.txt" />
+    <None Include="Resources\272-cross1.png" />
+    <None Include="Resources\272-cross.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
